--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   mqtt_client: ^9.0.0
   firebase_database: ^10.5.5
   material_design_icons_flutter: 7.0.7296
+  http: ^1.0.0
+  mysql1: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
