--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   firebase_database: ^10.5.5
   material_design_icons_flutter: 7.0.7296
   http: ^1.0.0
-  mysql1: ^0.19.0
+  mysql1: ^0.20.0
+  mysql_client: ^0.0.27
 
 
   # The following adds the Cupertino Icons font to your application.
